--- a/src/main/webapp/Protected/Pages/Users/NewProduction.xhtml
+++ b/src/main/webapp/Protected/Pages/Users/NewProduction.xhtml
@@ -266,13 +266,7 @@
                                         <h:inputText id="inputCodeSelect17" value="#{productionManagedBean.production.productcode17}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>
                                         &nbsp;                                        
                                         <h:inputHidden id="dispinputCodeSelect18" value="#{productseditbean.product.inputCode18}"></h:inputHidden>
-                                        <h:inputText id="inputCodeSelect18" value="#{productionManagedBean.production.productcode18}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>
-                                        &nbsp;                                        
-                                        <h:inputHidden id="dispinputCodeSelect19" value="#{productseditbean.product.inputCode19}"></h:inputHidden>
-                                        <h:inputText id="inputCodeSelect19" value="#{productionManagedBean.production.productcode19}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>
-                                        &nbsp;                                        
-                                        <h:inputHidden id="dispinputCodeSelect20" value="#{productseditbean.product.inputCode20}"></h:inputHidden>                                        
-                                        <h:inputText id="inputCodeSelect20" value="#{productionManagedBean.production.productcode20}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>
+                                        <h:inputText id="inputCodeSelect18" value="#{productionManagedBean.production.productcode18}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>                                        
                                     </div>
                                 </div>
                                 <!-- /.col-lg-6(nested) -->
@@ -331,13 +325,7 @@
                                         <h:inputText id="qtyPerPail17" value="#{productionManagedBean.production.productqtyperpail17}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>
                                         &nbsp;
                                         <h:inputHidden id="dispqtyPerPail18" value="#{productseditbean.product.inputCodeQTY18}"></h:inputHidden>
-                                        <h:inputText id="qtyPerPail18" value="#{productionManagedBean.production.productqtyperpail18}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>
-                                        &nbsp;
-                                        <h:inputHidden id="dispqtyPerPail19" value="#{productseditbean.product.inputCodeQTY19}"></h:inputHidden>
-                                        <h:inputText id="qtyPerPail19" value="#{productionManagedBean.production.productqtyperpail19}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>
-                                        &nbsp;
-                                        <h:inputHidden id="dispqtyPerPail20" value="#{productseditbean.product.inputCodeQTY20}"></h:inputHidden>                                        
-                                        <h:inputText id="qtyPerPail20" value="#{productionManagedBean.production.productqtyperpail20}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>
+                                        <h:inputText id="qtyPerPail18" value="#{productionManagedBean.production.productqtyperpail18}" styleClass="form-control" readonly="#{facesContext.renderResponse}"></h:inputText>                                        
                                     </div>
                                 </div>
                                 <!-- /.col-lg-6(nested) -->
@@ -376,13 +364,9 @@
                                         &nbsp;
                                         <h:inputText id="productionQty16" class="totalprice" value="#{productionManagedBean.production.productionqty16}" styleClass="form-control"></h:inputText>
                                         &nbsp;
-                                        <h:inputText id="productionQty17" class="totalprice" value="#{productionManagedBean.production.productionqty17}" styleClass="form-control"></h:inputText>
+                                        <h:inputText id="productionQty17" class="totalprice" value="#{productionManagedBean.production.productionqty17}" styleClass="form-control"></h:inputText>                                        
                                         &nbsp;
-                                        <h:inputText id="productionQty18" class="totalprice" value="#{productionManagedBean.production.productionqty18}" styleClass="form-control"></h:inputText>
-                                        &nbsp;
-                                        <h:inputText id="productionQty19" class="totalprice" value="#{productionManagedBean.production.productionqty19}" styleClass="form-control"></h:inputText>
-                                        &nbsp;
-                                        <h:inputText id="productionQty20" class="totalprice" value="#{productionManagedBean.production.productionqty20}" styleClass="form-control"></h:inputText>                                        
+                                        <h:inputText id="productionQty18" class="totalprice" value="#{productionManagedBean.production.productionqty18}" styleClass="form-control"></h:inputText>                                        
                                     </div>
                                 </div>
                                 <!-- /.col-lg-6(nested) -->                                
@@ -406,7 +390,32 @@
                                             <h:selectOneMenu id="additionalCode3" value="#{productionManagedBean.production.addcode3}" styleClass="form-control">
                                                 <f:selectItem itemLabel="" itemValue=""/>
                                                 <f:selectItems value="#{rwcodeManagedBean.codeList}"/>
-                                            </h:selectOneMenu> 
+                                            </h:selectOneMenu>
+                                        &nbsp;
+                                            <h:selectOneMenu id="additionalCode4" value="#{productionManagedBean.production.addcode4}" styleClass="form-control">
+                                                <f:selectItem itemLabel="" itemValue=""/>
+                                                <f:selectItems value="#{rwcodeManagedBean.codeList}"/>
+                                            </h:selectOneMenu>
+                                        &nbsp;
+                                            <h:selectOneMenu id="additionalCode5" value="#{productionManagedBean.production.addcode5}" styleClass="form-control">
+                                                <f:selectItem itemLabel="" itemValue=""/>
+                                                <f:selectItems value="#{rwcodeManagedBean.codeList}"/>
+                                            </h:selectOneMenu>
+                                        &nbsp;
+                                            <h:selectOneMenu id="additionalCode6" value="#{productionManagedBean.production.addcode6}" styleClass="form-control">
+                                                <f:selectItem itemLabel="" itemValue=""/>
+                                                <f:selectItems value="#{rwcodeManagedBean.codeList}"/>
+                                            </h:selectOneMenu>
+                                        &nbsp;
+                                            <h:selectOneMenu id="additionalCode7" value="#{productionManagedBean.production.addcode7}" styleClass="form-control">
+                                                <f:selectItem itemLabel="" itemValue=""/>
+                                                <f:selectItems value="#{rwcodeManagedBean.codeList}"/>
+                                            </h:selectOneMenu>
+                                        &nbsp;
+                                            <h:selectOneMenu id="additionalCode8" value="#{productionManagedBean.production.addcode8}" styleClass="form-control">
+                                                <f:selectItem itemLabel="" itemValue=""/>
+                                                <f:selectItems value="#{rwcodeManagedBean.codeList}"/>
+                                            </h:selectOneMenu>                                        
                                     </div>
                                 </div>
                                 <div class="col-lg-2">
@@ -417,6 +426,16 @@
                                         <h:inputText id="additionalProQty2" value="#{productionManagedBean.production.addprodqty2}" styleClass="form-control"></h:inputText>
                                         &nbsp;
                                         <h:inputText id="additionalProQty3" value="#{productionManagedBean.production.addprodqty3}" styleClass="form-control"></h:inputText>                                        
+                                        &nbsp;
+                                        <h:inputText id="additionalProQty4" value="#{productionManagedBean.production.addprodqty4}" styleClass="form-control"></h:inputText>
+                                        &nbsp;
+                                        <h:inputText id="additionalProQty5" value="#{productionManagedBean.production.addprodqty5}" styleClass="form-control"></h:inputText>
+                                        &nbsp;
+                                        <h:inputText id="additionalProQty6" value="#{productionManagedBean.production.addprodqty6}" styleClass="form-control"></h:inputText>
+                                        &nbsp;
+                                        <h:inputText id="additionalProQty7" value="#{productionManagedBean.production.addprodqty7}" styleClass="form-control"></h:inputText>
+                                        &nbsp;
+                                        <h:inputText id="additionalProQty8" value="#{productionManagedBean.production.addprodqty8}" styleClass="form-control"></h:inputText>                                        
                                     </div>                                    
                                 </div>
                             </div>
