--- a/src/main/webapp/Protected/Pages/Users/ShowProduct.xhtml
+++ b/src/main/webapp/Protected/Pages/Users/ShowProduct.xhtml
@@ -69,19 +69,19 @@
                                             <div class="row show-grid">
                                                 &nbsp;
                                                 <label>Input Code 1:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode1}"></h:outputText>
+                                                <h:outputText id="showProduct1" styleClass="form-control" value="#{productseditbean.product.inputCode1}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 2:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode2}"></h:outputText>                                                
+                                                <h:outputText id="showProduct2" styleClass="form-control" value="#{productseditbean.product.inputCode2}"></h:outputText>                                                
                                                 &nbsp;
                                                 <label>Input Code 3:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode3}"></h:outputText>
+                                                <h:outputText id="showProduct3" styleClass="form-control" value="#{productseditbean.product.inputCode3}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 4:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode4}"></h:outputText>
+                                                <h:outputText id="showProduct4" styleClass="form-control" value="#{productseditbean.product.inputCode4}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 5:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode5}"></h:outputText>                                                
+                                                <h:outputText id="showProduct5" styleClass="form-control" value="#{productseditbean.product.inputCode5}"></h:outputText>                                                
                                                 &nbsp;
                                             </div>
                                         </div>
@@ -89,19 +89,19 @@
                                             <div class="row show-grid">
                                                 &nbsp;
                                                 <label>Input Code 6:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode6}"></h:outputText>
+                                                <h:outputText id="showProduct6" styleClass="form-control" value="#{productseditbean.product.inputCode6}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 7:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode7}"></h:outputText>
+                                                <h:outputText id="showProduct7" styleClass="form-control" value="#{productseditbean.product.inputCode7}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 8:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode8}"></h:outputText>
+                                                <h:outputText id="showProduct8" styleClass="form-control" value="#{productseditbean.product.inputCode8}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 9:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode9}"></h:outputText>
+                                                <h:outputText id="showProduct9" styleClass="form-control" value="#{productseditbean.product.inputCode9}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 10:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode10}"></h:outputText>                                                
+                                                <h:outputText id="showProduct10" styleClass="form-control" value="#{productseditbean.product.inputCode10}"></h:outputText>                                                
                                                 &nbsp;
                                             </div>
                                         </div>
@@ -109,19 +109,19 @@
                                             <div class="row show-grid">
                                                 &nbsp;
                                                 <label>Input Code 11:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode11}"></h:outputText>
+                                                <h:outputText id="showProduct11" styleClass="form-control" value="#{productseditbean.product.inputCode11}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 12:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode12}"></h:outputText>
+                                                <h:outputText id="showProduct12" styleClass="form-control" value="#{productseditbean.product.inputCode12}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 13:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode13}"></h:outputText>
+                                                <h:outputText id="showProduct13" styleClass="form-control" value="#{productseditbean.product.inputCode13}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 14:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode14}"></h:outputText>
+                                                <h:outputText id="showProduct14" styleClass="form-control" value="#{productseditbean.product.inputCode14}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 15:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode15}"></h:outputText>                                                
+                                                <h:outputText id="showProduct15" styleClass="form-control" value="#{productseditbean.product.inputCode15}"></h:outputText>                                                
                                                 &nbsp;
                                             </div>
                                         </div> 
@@ -129,19 +129,13 @@
                                             <div class="row show-grid">
                                                 &nbsp;
                                                 <label>Input Code 16:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode16}"></h:outputText>
+                                                <h:outputText id="showProduct16" styleClass="form-control" value="#{productseditbean.product.inputCode16}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 17:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode17}"></h:outputText>
+                                                <h:outputText id="showProduct17" styleClass="form-control" value="#{productseditbean.product.inputCode17}"></h:outputText>
                                                 &nbsp;
                                                 <label>Input Code 18:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode18}"></h:outputText>
-                                                &nbsp;
-                                                <label>Input Code 19:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode19}"></h:outputText>
-                                                &nbsp;
-                                                <label>Input Code 20:</label>
-                                                <h:outputText id="inputCodeSelect1" styleClass="form-control" value="#{productseditbean.product.inputCode20}"></h:outputText>                                                
+                                                <h:outputText id="showProduct18" styleClass="form-control" value="#{productseditbean.product.inputCode18}"></h:outputText>
                                                 &nbsp;
                                             </div>
                                         </div>                                         
